--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -407,6 +407,16 @@ h1 , h2 , h3 , h4 , h5 ,h6 , .heading{
         margin: 0px;
     }
 }
+.table {
+    th{
+        text-align: center;
+    }
+    .small-row{
+        th , td{
+            min-width: 180px;
+        }
+    }
+}
 @media (max-width: 900px) {
     .logo-sm img{
         width: 100px;
